FIX (CD-84): Fix alignment for 'Pay Balance' link

--- a/public/css/theeb-ar.css
+++ b/public/css/theeb-ar.css
@@ -468,3 +468,5 @@ span.my-booking-reservation-no{font-size: small; margin-top: 8px; display: block
   }
 }
 /*--------------CSS for Loader end-------------------*/
+
+.bln_pay {float: left;}
